# tg_menu_builder

./: .env-default  .env-example  .gitignore  Config.py  README.md  bot_init.py  callback_models.py  create_venv.sh  example_data_source.py  handlers.py  main.py  menu.py  menu_builder.py  pyproject.toml  requirements.txt
data/: Config.py  MenuCbData.py  RepositoryStorage.py  Scope.py
datasource/: AbstractDataSource.py  JsonDataSource.py
repository/: AccessRepository.py  BaseRepository.py  FunctionRepository.py  MenuRepository.py  ScopeRepository.py  TranslationRepository.py
src/menu_builder/: menu_builder.py
src/menu_builder/data/: MenuCbData.py  MessageModel.py  RepositoryStorage.py  UserStates.py
src/menu_builder/datasource/: JsonDataSource.py
src/menu_builder/repository/: AccessRepository.py  BaseRepository.py  FunctionRepository.py  MenuRepository.py  ScopeRepository.py  TranslationRepository.py
src/menu_builder/utils/: message_functions.py
