[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tg_menu_builder"
version = "0.1.0"
description = "Telegram menu builder from json"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Molo4ko", email = "vankad24@mail.ru"},
]
dependencies = [
    "aiogram==3.22.0",
    "python-dotenv==1.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
